modify create response to return ID
